Added projects component.

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -14,16 +14,16 @@
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Info
+                        <span class='glyphicon glyphicon-home'></span> Home
                     </a>
                 </li>                
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
+                    <a [routerLink]="['/projects']">
                         <span class='glyphicon glyphicon-home'></span> Projects
                     </a>
                 </li>  
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
+                    <a [routerLink]="['/contact']">
                         <span class='glyphicon glyphicon-home'></span> Contact
                     </a>
                 </li>                 
