--- a/ClientApp/app/components/projects/projects.component.html
+++ b/ClientApp/app/components/projects/projects.component.html
@@ -1,3 +1,8 @@
 ﻿<div class="container">
   <h1>Projects</h1>
+  <div>
+    <a [routerLink]="['/project']">
+      <span class='glyphicon glyphicon-home'></span> Project 1
+    </a>
+  </div>
 </div>
