--- a/ClientApp/app/components/project/project.component.html
+++ b/ClientApp/app/components/project/project.component.html
@@ -1,4 +1,3 @@
-﻿<h1>{{title}}</h1>
-<!-->h1>{{project.title}}</!--h1>
-<h2>{{project.createdOn}}</h2>
-<div [innerHtml]="project.htmlContent"></div-->
+﻿<h1>{{project.title}}</h1>
+<h4>{{project.createdOn | date:'fullDate'}}</h4>
+<div [innerHtml]="project.htmlContent"></div>
