Changed added passing apiKey for creating projects

--- a/ClientApp/app/components/editor/editor.component.html
+++ b/ClientApp/app/components/editor/editor.component.html
@@ -13,6 +13,13 @@
             <input type="text" class="form-control" id="htmlContent" required
                    [(ngModel)]="project.htmlContent" name="htmlContent">
         </div>
+
+        <div class="form-group">
+            <label for="apiKey">API Key</label>
+            <input type="text" class="form-control" id="apiKey" required
+                   [(ngModel)]="apiKey" name="apiKey">
+        </div>
+
         <button type="submit" class="btn btn-success">Save</button>
     </form>    
 </div>
