--- a/ClientApp/app/components/editor/editor.component.html
+++ b/ClientApp/app/components/editor/editor.component.html
@@ -1,17 +1,19 @@
 ﻿<div class="container">
     <h1>Project Form</h1>
     <div id="editor"></div>
-    <form (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()" #captchaProtectedForm="ngForm">
         <div class="form-group">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" required
                    [(ngModel)]="project.title" name="title">
-          <label for="description">Description</label>
-          <textarea class="form-control" id="description" required [(ngModel)="project.description" name="description"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" required [(ngModel)]="project.description" name="description"></textarea>
         </div>
         <div class="form-group">
             <label for="htmlContent">HTML content</label>
-          <textarea class="form-control" id="htmlContent" required [(ngModel)]="project.htmlContent" name="htmlContent"></textarea>
+            <textarea class="form-control" id="htmlContent" required [(ngModel)]="project.htmlContent" name="htmlContent"></textarea>
         </div>
 
         <div class="form-group">
@@ -20,6 +22,13 @@
                    [(ngModel)]="apiKey" name="apiKey">
         </div>
 
-        <button type="submit" class="btn btn-success">Save</button>
-    </form>    
+        <div class="form-group">
+            <re-captcha [(ngModel)]="captcha"
+                        name="captcha"
+                        required
+                        siteKey="6LcbsRsUAAAAAN2j-dZLSrbhOkyYbVVLa4I702kv"
+                        #captchaControl="ngModel"></re-captcha>
+        </div>
+        <button [disabled]="!captchaProtectedForm.form.valid" type="submit" class="btn btn-success">Save</button>
+    </form>
 </div>
