New colours and layout.

--- a/ClientApp/app/components/app/app.component.html
+++ b/ClientApp/app/components/app/app.component.html
@@ -1,10 +1,8 @@
-<div class='container-fluid'>
-    <div class='row'>
-        <div class='col-sm-3'>
-            <nav-menu></nav-menu>
-        </div>
-        <div class='col-sm-9 body-content'>
-            <router-outlet></router-outlet>
-        </div>
+<div class="container">
+    <div class="navbar navbar-default">
+        <nav-menu></nav-menu>
+    </div>
+    <div class="jumbotron">
+        <router-outlet></router-outlet>
     </div>
 </div>
