--- a/ClientApp/app/components/projects/projects.component.html
+++ b/ClientApp/app/components/projects/projects.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-    <h1>Projects</h1>
+    <h1>projects</h1>
 
     <div class="outer-panel" [hidden]="!isLoading">
         <div class="loading-icon">
