--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>jbarszczewski</h1>
+  <h1>about me</h1>
 
     <div class="outer-panel" [hidden]="!isLoading">
         <div class="loading-icon">
@@ -12,5 +12,5 @@
         </div>
     </div>
 
-  <div [innerHtml]="bio" [hidden]="isLoading"></div>
+  <div class="bio" [innerHtml]="bio" [hidden]="isLoading"></div>
 </div>
