--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -1,33 +1,16 @@
-<div class='main-nav'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-            <a class='navbar-brand' [routerLink]="['/home']">jbarszczewski</a>
-        </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>                
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/projects']">
-                        <span class='glyphicon glyphicon-home'></span> Projects
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/editor']">
-                        <span class='glyphicon glyphicon-home'></span> Editor
-                    </a>
-                </li>              
-            </ul>
-        </div>
+<div class='container-fluid'>
+    <div class='navbar-header'>
+        <a class='navbar-brand' [routerLink]="['/home']">jbarszczewski</a>
     </div>
+    <ul class='nav navbar-nav navbar-right'>
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/home']">home</a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/projects']">projects</a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/editor']">editor</a>
+        </li>
+    </ul>
 </div>
